Add minor fixes